~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Bugfixes in 4.1 version

* postgresql-setup --upgrade now works with "umask & 0004 != 0"

* fixed semantics of 'redhat_sockets_hack' configuration option

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 4.0 version:

* The postgresql-upgrade package is now optional packaging feature, for the
  postgresql-setup --upgrade scenario it might/might not be needed.

* Additional check for correct postgres's $HOME permissions implemented.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Bugfixes in 3.5 version

* Fix spelling in error message regarding data-dir mountpoint.

* Fix testsuite for SCL.

* Fix documentation regarding --initdb (we require root actually).

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Bugfixes in 3.4 version

* Fix upgrade for non-standard unit names with --unit option.

New in 3.4 version

* Add --upgrade-from-unit option which allows proper selection of
  predecessor service name (when the default detection does not help).

* postgresql-setup now throws warning if the PGDATA directory (or its
  parent directory) is a mountpoint.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Bugfixes in 3.3 version

* The PGPORT/PGOPTS/.. variables should be correctly forwarded down from
  the initstcript into postgresql-ctl.

* Initscript's 'start' function again reports success if daemon is already
  running.

New in 3.3 version

* New option PGSTARTWAIT for sysvinit systems.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 3.2 version

* The --new-systemd-unit option now cleans the recently created drop-in
  directory if something goes wrong.

Bugfixes in 3.2 version

* Fix regression of setting the default pgdata variable for non-default
  unit names.  This broke --new-systemd-unit option and --initdb, because