@@ -16,6 +16,7 @@ install-sh
 Makefile
 Makefile.in
 missing
+macros.postgresql*
 package.m4
 postgresql*-check-db-dir
 postgresql*-ctl
